visibility fixed

--- a/css/styles.css
+++ b/css/styles.css
@@ -469,14 +469,14 @@ h1,h2,h3,h4,h5,h6,p,ul,ol {
 
     opacity: 1;
 
-    transition-property: opacity;
+    transition-property: opacity, visibility;
     transition-duration: 250ms;
     transition-timing-function: (0.4, 0, 0.2, 1);
 
 }
 
 .backdrop.is-hidden {
-    visibility: visible;
+    visibility: hidden;
     opacity: 0;
     pointer-events: none;
 }
